<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@android:color/holo_orange_dark">
    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date_here"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/etMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_money_here"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_here"
        android:inputType="textMultiLine"
        android:padding="5dp"/>
    <Spinner
        android:id="@+id/spinnetType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <Button
            android:id="@+id/insertBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/insert"/>
        <Button
            android:id="@+id/readBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/read"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <Button
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/update"/>
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/delete"/>
    </LinearLayout>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="2dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/holo_red_light"
        android:theme="@style/TextAppearance.AppCompat.Body1"
        android:backgroundTintMode="add"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:backgroundTint="@android:color/holo_purple"
        android:background="@android:color/holo_green_light"
        tools:targetApi="lollipop">
        <TextView
            android:id="@+id/tvIncSum"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="18sp"
            android:hint="@string/income_btn"/>
        <TextView
            android:id="@+id/tvExpSum"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_weight="0.5"
            android:hint="@string/Exp_btn"/>

    </LinearLayout>
</LinearLayout>